# deep-agent-demo

./: main.py  pyproject.toml
agents/: prompts.py  sub_agents.py  tools.py
backends/: local_file_system.ipynb
human-in-the-loop/: main.ipynb
test/: main.ipynb  main2.ipynb  top_llm_papers.md
test/part-2/: main.ipynb
tools/: web_search_fail.py
